[gd_scene load_steps=3 format=3 uid="uid://lha7cvwk7nj2"]

[ext_resource type="Script" path="res://sidewalk.gd" id="1_fjce0"]

[sub_resource type="Curve2D" id="Curve2D_8ef8w"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 32)
}
point_count = 2

[node name="Sidewalk" type="Node2D"]
script = ExtResource("1_fjce0")

[node name="Temp" type="Node2D" parent="."]
position = Vector2(0, -32)

[node name="Path2D" type="Path2D" parent="Temp"]
curve = SubResource("Curve2D_8ef8w")

[node name="PathFollow2D" type="PathFollow2D" parent="Temp/Path2D"]
rotation = 1.5708

[node name="DelayTimerPerson" type="Timer" parent="Temp"]
one_shot = true
autostart = true

[node name="DelayTimerVehicle" type="Timer" parent="Temp"]
one_shot = true
autostart = true

[connection signal="timeout" from="Temp/DelayTimerPerson" to="." method="_on_delay_timer_person_timeout"]
[connection signal="timeout" from="Temp/DelayTimerVehicle" to="." method="_on_delay_timer_vehicle_timeout"]
